changed destination cards

--- a/index.html
+++ b/index.html
@@ -58,66 +58,47 @@
             <div class="container">
                 <h5 class="uppercase"><strong>FERNWEH DESTINATIONS</strong></h5>
                 <div class="row">
-                    <div class="col s6 m3 l2">
+                    <div class="col s12 m3 l3">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_manali.jpg">
                             </div>
-                            <div class="card-content">
-                                <p>MANALI</p>
+                            <div class="card-content black white-text" style="height: 230px">
+                                <p class="center-align">MANALI</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2">
+                    <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_agra.jpg">
                             </div>
-                            <div class="card-content">
-                                <p>AGRA</p>
+                            <div class="card-content black white-text" style="height: 230px">
+                                <p class="center-align">AGRA</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2">
+                    <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_alappuzha.jpg">
                             </div>
-                            <div class="card-content">
-                                <p>ALAPPUZHA</p>
+                            <div class="card-content black white-text" style="height: 230px">
+                                <p class="center-align">ALAPPUZHA</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2">
+                    <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_coorg.jpg">
                             </div>
-                            <div class="card-content">
-                                <p>COORG</p>
+                            <div class="card-content black white-text" style="height: 230px">
+                                <p class="center-align">COORG</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2 hide-on-med-and-down">
-                        <div class="card  z-depth-4">
-                            <div class="card-image">
-                                <img src="img/d_jaisalmer.jpg">
-                            </div>
-                            <div class="card-content">
-                                <p>JAISALMER</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col s6 m3 l2 hide-on-med-and-down">
-                        <div class="card  z-depth-4">
-                            <div class="card-image">
-                                <img src="img/d_mysore.jpg">
-                            </div>
-                            <div class="card-content">
-                                <p>MYSORE</p>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div class=" col s12 m12 l12 right-align">
                         <a href="destinations.html">view more</a>
                     </div>
