--- a/pages/mysore.html
+++ b/pages/mysore.html
@@ -5,7 +5,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-        <title>JAISALMER</title>
+        <title>MYSORE</title>
 
         <!-- CSS  -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -26,10 +26,10 @@
         </div>
 
         <div class="w3-display-container">
-            <img class="responsive-img hide-on-small-only z-depth-4" src="../img/destination_hero/hero_jaisalmer.jpg">
-            <img class="responsive-img hide-on-med-and-up z-depth-4" src="../img/destination_hero/m_hero_jaisalmer.jpg">
-            <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>JAISALMER</strong></h1>
-                <h3 class="white-text hide-on-med-and-up center"><strong>JAISALMER</strong></h3></div>
+            <img class="responsive-img hide-on-small-only z-depth-4" src="../img/destination_hero/hero_mysore.jpg">
+            <img class="responsive-img hide-on-med-and-up z-depth-4" src="../img/destination_hero/m_hero_mysore.jpg">
+            <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>MYSORE</strong></h1>
+                <h3 class="white-text hide-on-med-and-up center"><strong>MYSORE</strong></h3></div>
         </div> 
         <br>
         <div class="container">
@@ -41,10 +41,10 @@
                 <h4><bold>DESCRIPTION</bold></h4>
                 <div class="row">
                     <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 2px">
-                        <p>The Jewel of Rajasthan, Jaisalmer, packs everything Rajasthan represents- Forts, sand dunes, desert safari, and the spicy Rajasthani food. When in town, take a desert Safari and spend a night in the desert. Back in the city, you would travel through narrow lanes with Havelis and tiny houses coexisting with each other in harmony. Almost the whole city is carved out of the Golden-Honey Sandstone as the Fort and lends the name Golden City to Jaisalmer. </p>
+                        <p>The historic settlement of Mysuru (which changed its name from Mysore in 2014) is one of South India's most enchanting cities, famed for its glittering royal heritage and magnificent monuments and buildings. Its World Heritage–listed palace brings most travellers here, but Mysuru is also rich in tradition with a deeply atmospheric bazaar district littered with spice stores and incense stalls. Ashtanga yoga is another drawcard and there are several acclaimed schools which attract visitors from across the globe.</p>
                         <div class="col l6 m6 s6">&#8377; 1500</div>
                         <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
-                        <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 2 Days</div>
+                        <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
                         <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
 
                     </div>
@@ -52,7 +52,23 @@
                 <h4><strong>ITINERARY</strong></h4>
                 <div class="row">
                     <div class="col l9 m9 s12 z-depth-3">
-                        <p>We leave for desert which is around 40 km from hotel post Lunch. After reaching the spot you will spend some time with your camel over there, to become friend with your companion for the next 18 hours. Afterwards we will start our journey to the Sunset point. Enjoy the beautiful view of desert in the evening and after sunset there will be tea, snacks, bonfire and dinner. We spend the night sleeping under the stars. Mattresses & quilt will be provided by hotel. In the morning post breakfast we again head out for camel safari and after that we head back to hotel.</p>
+                        <h5>DAY 1</h5>
+                        <p>
+                            <strong>Sightseeing in Bangalore &amp; visit to Mysore</strong><br>
+                            Upon your arrival in Bangalore, you’ll be picked up for your journey to Mysore. On your way to the regal city, you will get to visit the famous Bangalore Palace and Iskcon Temple. After you arrive in Mysore, check in into your hotel and relax for a while.<br>
+                            In the evening, visit the Brindavan Gardens located behind the Krishnaraja Sagar Dam and spend a memorable time together. Later, return to your hotel for an overnight stay in Mysore.
+                        </p>
+                        <h5>DAY 2</h5>
+                        <p>
+                            From Mysore Palace to Brindavan Gardens, gear up to make the most of this day at the famous attractions of the city.<br>
+                            Gear up for your second day of thrilling experiences and embark on an exciting Mysore city tour that will take you through some of the most interesting and famous places in Mysore. From the majestic Chamundi Hills to the famous Nandi Statue and the Wax Museum, go on to explore the important landmarks of Mysore like that of Mysore Palace, Tipu Sultan’s Palace, Mysore Zoo, and St. Philomena's Church.<br>
+                            Continue to explore the astonishing tourist places around Mysore like that of Ranganatha Swamy Temple, and Ranganthittu Bird Sanctuary that will fill you with an awe by their charm. Later in the evening, spend some quality time with your friends, family, or your better half at the refreshing and historical Brindavan Gardens that is located behind the Krishnaraja Sagar Dam. After an eventful day, get back to the hotel and enjoy your overnight stay.
+                        </p>
+                        <h5>DAY 3</h5> 
+                        <p>
+                            Your exquisite Mysore tour package ends today as you bid a hearty farewell to the charming city of Mysore and set back on a safe return journey.<br>
+                            Have a heart breakfast and proceed with the check-out process at the hotel in Mysore as this day marks the end of your 2 nights 3 days exquisite Mysore tour package. You will be transferred from Mysore to Bangalore wherein you can enjoy shopping at the famous Town Market. Later in the day, you will be dropped at the airport/railway station, from where you can embark on a safe return journey.
+                        </p>
                     </div>
                 </div>
                 <h4><bold>INCLUSIONS</bold></h4>
@@ -73,7 +89,7 @@
                             <input type="text" id="name" placeholder="Enter your name">
                             <input type="text" id="number" placeholder="Enter your contact number">
                             <input type="email" id="email" placeholder="Enter your email address">
-                            <input type="hidden" id="dest" value="jaisalmer">
+                            <input type="hidden" id="dest" value="allapuzha">
 
                             <input class="waves-effect waves-light btn" type="submit" value="SUBMIT">
                         </form>
