changed escape card

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="card-image">
                                 <img src="img/d_manali.jpg">
                             </div>
-                            <div class="card-content black white-text" style="height: 230px">
+                            <div class="card-content black white-text" style="height: 220px">
                                 <p class="center-align">MANALI</p>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                             <div class="card-image">
                                 <img src="img/d_agra.jpg">
                             </div>
-                            <div class="card-content black white-text" style="height: 230px">
+                            <div class="card-content black white-text" style="height: 220px">
                                 <p class="center-align">AGRA</p>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                             <div class="card-image">
                                 <img src="img/d_alappuzha.jpg">
                             </div>
-                            <div class="card-content black white-text" style="height: 230px">
+                            <div class="card-content black white-text" style="height: 220px">
                                 <p class="center-align">ALAPPUZHA</p>
                             </div>
                         </div>
@@ -93,12 +93,12 @@
                             <div class="card-image">
                                 <img src="img/d_coorg.jpg">
                             </div>
-                            <div class="card-content black white-text" style="height: 230px">
+                            <div class="card-content black white-text" style="height: 220px">
                                 <p class="center-align">COORG</p>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class=" col s12 m12 l12 right-align">
                         <a href="destinations.html">view more</a>
                     </div>
@@ -108,39 +108,63 @@
             <div class="container">
                 <h5 class="uppercase"><strong>FERNWEH ESCAPE</strong></h5>
                 <div class="row">
-                    <div class="col s12 m4 l4">
+                    <div class="col s12 m3 l3">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/e_agra.jpg">
                             </div>
-                            <div class="card-content">
-                                <p>Category</p><br>
+                            <div class="card-content black white-text">
                                 <h6><strong>Taj Mahal</strong></h6><br>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <div class="col l6 m6 s6">&#8377; 1500</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
+                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m4 l4 hide-on-small-only">
+                    <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/e_agra.jpg">
                             </div>
-                            <div class="card-content">
-                                <p>Category</p><br>
+                            <div class="card-content black white-text">
                                 <h6><strong>Taj Mahal</strong></h6><br>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <div class="col l6 m6 s6">&#8377; 1500</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
+                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m4 l4 hide-on-small-only">
+                    <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/e_agra.jpg">
                             </div>
-                            <div class="card-content">
-                                <p>Category</p><br>
+                            <div class="card-content black white-text">
                                 <h6><strong>Taj Mahal</strong></h6><br>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <div class="col l6 m6 s6">&#8377; 1500</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
+                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m3 l3 hide-on-small-only">
+                        <div class="card  z-depth-4">
+                            <div class="card-image">
+                                <img src="img/e_agra.jpg">
+                            </div>
+                            <div class="card-content black white-text">
+                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <div class="col l6 m6 s6">&#8377; 1500</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
+                                <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
+                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
