--- a/index.html
+++ b/index.html
@@ -111,60 +111,60 @@
                     <div class="col s12 m3 l3">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/e_agra.jpg">
+                                <img src="img/e_jaisalmer.jpg">
                             </div>
                             <div class="card-content black white-text">
-                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <h6><strong>Jaisalmer</strong></h6><br>
                                 <div class="col l6 m6 s6">&#8377; 1500</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
-                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
+                                <a href="pages/jaisalmer.html" class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/e_agra.jpg">
+                                <img src="img/e_mysore.jpg">
                             </div>
                             <div class="card-content black white-text">
-                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <h6><strong>Mysore</strong></h6><br>
                                 <div class="col l6 m6 s6">&#8377; 1500</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
-                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
+                                <a href="pages/mysore.html" class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/e_agra.jpg">
+                                <img src="img/e_allapuzha.jpg">
                             </div>
                             <div class="card-content black white-text">
-                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <h6><strong>Allapuzha</strong></h6><br>
                                 <div class="col l6 m6 s6">&#8377; 1500</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
-                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
+                                <a href="pages/allapuzha.html" class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/e_agra.jpg">
+                                <img src="img/e_ooty.jpg">
                             </div>
                             <div class="card-content black white-text">
-                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <h6><strong>Ooty</strong></h6><br>
                                 <div class="col l6 m6 s6">&#8377; 1500</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
                                 <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
-                                <a class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
+                                <a href="pages/ooty.html" class="waves-effect waves-light btn black accent-4" style="width: 100%">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
