--- a/destinations.html
+++ b/destinations.html
@@ -28,10 +28,12 @@
         <div class="w3-display-container">
             <img class="responsive-img hide-on-small-only z-depth-4" src="img/destination_hero.jpg">
             <img class="responsive-img hide-on-med-and-up z-depth-4" src="img/destination_hero_m.jpg">
-            <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>Fernweh Destinations</strong></h1>
-                <h3 class="white-text hide-on-med-and-up center"><strong>Fernweh Destinations</strong></h3></div>
+         <!--   <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>Fernweh Destinations</strong></h1>
+                <h3 class="white-text hide-on-med-and-up center"><strong>Fernweh Destinations</strong></h3></div>  -->
         </div> 
         <br>
+        <h1 class="center-align hide-on-small-only"><strong>Fernweh Destinations</strong></h1>
+                <h3 class="center-align hide-on-med-and-up center"><strong>Fernweh Destinations</strong></h3>
         <div class="container">
             <div class="row">
                 
@@ -41,10 +43,10 @@
                             <img style="" src="img/db_agra.jpg">
                         </div>
                         <div class="card-stacked">
-                            <div class="card-content center-align">
+                            <div class="card-content center-align black white-text">
                                 <h5><strong>Agra</strong></h5>
                                 <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
@@ -54,10 +56,10 @@
                         <div class="card-image">
                             <img src="img/db_agra.jpg">
                         </div>
-                        <div class="card-content center-align">
+                        <div class="card-content center-align black white-text">
                             <h5><strong>Agra</strong></h5>
                             <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                            <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                         </div>
                     </div>
                 </div>
@@ -68,10 +70,10 @@
                             <img style="" src="img/db_alappuzha.jpg">
                         </div>
                         <div class="card-stacked">
-                            <div class="card-content center-align">
+                            <div class="card-content center-align black white-text">
                                 <h5><strong>Alappuzha</strong></h5>
                                 <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
@@ -81,10 +83,10 @@
                         <div class="card-image">
                             <img src="img/db_alappuzha.jpg">
                         </div>
-                        <div class="card-content center-align">
+                        <div class="card-content center-align black white-text">
                             <h5><strong>Alappuzha</strong></h5>
                             <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                            <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                         </div>
                     </div>
                 </div>
@@ -95,10 +97,10 @@
                             <img style="" src="img/db_coorg.jpg">
                         </div>
                         <div class="card-stacked">
-                            <div class="card-content center-align">
+                            <div class="card-content center-align black white-text">
                                 <h5><strong>Coorg</strong></h5>
                                 <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
@@ -108,10 +110,10 @@
                         <div class="card-image">
                             <img src="img/db_coorg.jpg">
                         </div>
-                        <div class="card-content center-align">
+                        <div class="card-content center-align black white-text">
                             <h5><strong>Coorg</strong></h5>
                             <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                            <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                         </div>
                     </div>
                 </div>
@@ -122,10 +124,10 @@
                             <img style="" src="img/db_jaisalmer.jpg">
                         </div>
                         <div class="card-stacked">
-                            <div class="card-content center-align">
+                            <div class="card-content center-align black white-text">
                                 <h5><strong>Jaisalmer</strong></h5>
                                 <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
@@ -135,10 +137,10 @@
                         <div class="card-image">
                             <img src="img/db_jaisalmer.jpg">
                         </div>
-                        <div class="card-content center-align">
+                        <div class="card-content center-align black white-text">
                             <h5><strong>Jaisalmer</strong></h5>
                             <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                            <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                         </div>
                     </div>
                 </div>
@@ -149,10 +151,10 @@
                             <img style="" src="img/db_manali.jpg">
                         </div>
                         <div class="card-stacked">
-                            <div class="card-content center-align">
+                            <div class="card-content center-align black white-text">
                                 <h5><strong>Manali</strong></h5>
                                 <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
@@ -162,10 +164,10 @@
                         <div class="card-image">
                             <img src="img/db_manali.jpg">
                         </div>
-                        <div class="card-content center-align">
+                        <div class="card-content center-align black white-text">
                             <h5><strong>Manali</strong></h5>
                             <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                            <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                         </div>
                     </div>
                 </div>
@@ -176,10 +178,10 @@
                             <img style="" src="img/db_mysore.jpg">
                         </div>
                         <div class="card-stacked">
-                            <div class="card-content center-align">
+                            <div class="card-content center-align black white-text">
                                 <h5><strong>Mysore</strong></h5>
                                 <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                                <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                             </div>
                         </div>
                     </div>
@@ -189,10 +191,10 @@
                         <div class="card-image">
                             <img src="img/db_mysore.jpg">
                         </div>
-                        <div class="card-content center-align">
+                        <div class="card-content center-align black white-text">
                             <h5><strong>Mysore</strong></h5>
                             <p>At 10 minutes walk to Taj Mahal,Hostel in Agra offers beautiful lawns and cafe.</p>
-                            <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            <a class=" waves-effect waves-light btn black accent-4">EXPLORE <i class="material-icons right">send</i></a>
                         </div>
                     </div>
                 </div>
@@ -200,17 +202,6 @@
             </div>  
         </div>
 
-
-
-
-
-<footer class="page-footer orange">
-<div class="footer-copyright">
-<div class="container">
-Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoothery">Vishnu Poothery</a>
-</div>
-</div>
-</footer>
 
 
         <!--  Scripts-->
