--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
                                 <img src="img/d_agra.jpg">
                             </div>
                             <div class="card-content black white-text" style="height: 220px">
-                                <p class="center-align">AGRA</p>
+                                <p class="center-align">WAYANAD</p>
                             </div>
                         </div>
                     </div>
                     <div class="col s12 m3 l3 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/d_alappuzha.jpg">
+                                <img src="img/d_wayanad.jpg">
                             </div>
                             <div class="card-content black white-text" style="height: 220px">
-                                <p class="center-align">ALAPPUZHA</p>
+                                <p class="center-align">AGRA</p>
                             </div>
                         </div>
                     </div>
