--- a/pages/jaisalmer.html
+++ b/pages/jaisalmer.html
@@ -12,6 +12,13 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
         <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
         <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+        <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+        <script type="text/javascript">
+            (function(){
+                emailjs.init("user_V92IPjtB2oUDazgkufIk5");
+            })();
+        </script>
     </head>
     <body>
         <div class="navbar-fixed">
@@ -75,7 +82,7 @@
                             <input type="email" id="email" placeholder="Enter your email address">
                             <input type="hidden" id="dest" value="jaisalmer">
 
-                            <input class="waves-effect waves-light btn" type="submit" value="SUBMIT">
+                            <input class="waves-effect waves-light btn" type="submit" value="SUBMIT" onclick="sendMail();">
                         </form>
                     </div>
                 </div>
@@ -112,6 +119,9 @@ Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoot
         </script>
 
         <script>
+            function sendMail(){
+                emailjs.send("vishnu_fernweh","template_vZCHqO24",{name: "James", notes: "Check this out!"});
+            }
             function myMap() {
                 var mapOptions = {
                     center: new google.maps.LatLng(26.9157, 70.9083),
